Fix overlaping divs

--- a/portfolio-frontend/src/components/navigation-bar/navigation.scss
+++ b/portfolio-frontend/src/components/navigation-bar/navigation.scss
@@ -9,7 +9,8 @@
 	flex-direction: row;
 	align-items: center;
 	margin: 2em 3em 0 0;
-	transition: .4s all ease;
+  transition: .4s all ease;
+  z-index: 12;
 	.icon-container{
 		flex: 1;
 		img{
